# lang-sje

./: .glottologid.txt  AUTHORS  Adjektivbojning.xml  CITATION.cff  Links.jspwiki  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  Verbbojning_Pitesamiska_jamnst.xml  Verbbojning_Pitesamiska_uddast.md  _config.yml  abbreviations-stems-fst-src.md  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adpositions-stems-fst-src.md  adpositions-stems.jspwiki  adverbs-stems-fst-src.md  autogen.sh  compounding-fst-src.md  configure.ac  conjunctions-stems-fst-src.md  conjunctions-stems.md  disambiguator-cg3-src.md  giella-sje.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  interjections-stems.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  nouns-stems-fst-src.md  nouns-stems.md  numerals-stems-fst-src.md  phonology-fst-src.md  phonology-morphology.md  (+55 more)
.gut/: delta.toml  manifest.toml
corp/: steggo_110514.txt
devtools/: FMP_mutator.xsl  FMP_mutator2elanGloss.xsl  FMP_mutator2lexc.xsl  FMP_mutator2nds.xsl  GT-workshopWeek-April2019.txt  JW_toDo_sje.txt  PSDP-ELANstructurizer.xsl  addGloss2ELAN.xsl  adj_minip.sh  check_analysis_regressions.sh.in  cmp_minip.sh  der_noun_minip.sh  der_verb_minip.sh  eaf2html.xsl  noun_minip.sh  poss_minip.sh  prop_minip.sh  sje19210000a-lagercrantz1957a-410-orth.txt  sjeGlosses.xml  test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh  verb_minip.sh
doc/: Adjektivbojning.html  Adjektivbojning.xml  Links.jspwiki  Makefile.am  PiteSaamiDocumentation.jspwiki  Verbbojning_Pitesamiska_jamnst.html  Verbbojning_Pitesamiska_jamnst.xml  Verbbojning_Pitesamiska_uddast.html  Verbbojning_Pitesamiska_uddast.xml  WhatIsThis.jspwiki  abbreviations-stems.jspwiki  adjectives-affixes.jspwiki  adjectives-stems.jspwiki  adjektiv.docx  adpositions-stems.jspwiki  adverbs-stems.jspwiki  conjunctions-stems.jspwiki  docu-sje-grammartags.xml  (+14 more)
docs/: Adjektivbojning.xml  Links.md  Makefile.am  PiteSaamiDocumentation.jspwiki  Verbbojning_Pitesamiska_jamnst.md  Verbbojning_Pitesamiska_jamnst.xml  Verbbojning_Pitesamiska_uddast.xml  WhatIsThis.jspwiki  _config.yml  abbreviations-stems.md  adjectives-affixes.jspwiki  adjectives-affixes.md  adjectives-stems.jspwiki  adjectives-stems.md  adpositions-stems.md  adverbs-stems.jspwiki  adverbs-stems.md  conjunctions-stems.md  docu-sje-grammartags.md  docu-sje-grammartags.xml  index-header.md  index.md  interjections-stems.md  language-map.md  link-header.jspwiki  link-header.md  nouns-stems.jspwiki  nouns-stems.md  numerals-stems.md  particles-stems.md  phonology-morphology.md  preamble.jspwiki  pronouns-stems.md  punctuation-stems.jspwiki  root-morphology.jspwiki  root-morphology.md  site.xml  sje-propernouns-stems.md  sje.md  spellersuggs.json  (+5 more)
docs/badgedata/: speller-suggestions.json
docs/typosreport/: report.json
src/: Makefile  Makefile.am  adj-sje-lex.txt  adv-sje-lex.txt  case.regex  conjunction-sje-lex.txt  interjection-sje-lex.txt  noun-sje-lex.txt  numeral-sje-lex.txt  particle-sje-lex.txt  pp-sje-lex.txt  pronoun-sje-lex.txt  propernoun-sje-lex.txt  punct-sje-lex.txt  sje-lex.txt  sje-num.txt  smj2sje-num.pl  spellrelax.regex  subjunction-sje-lex.txt  twol-sje.txt  verb-sje-lex.txt
src/cg3/: disambiguator.cg3
src/filters/: Makefile.am  block-illegal_compound-strings.regex
src/fst/: Makefile.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/affixes/: adjectives.lexc  nouns.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  insert-default-compounding-tags.regex
src/fst/incoming/: sje_initial_wordlist_jkw_version001.xml  sje_initial_wordlist_jkw_version002.xml
src/fst/morphology/: Makefile.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/morphology/affixes/: adjectives.lexc  nouns.lexc  symbols.lexc  verbs.lexc
src/fst/morphology/incoming/: inc2
src/fst/morphology/stems/: adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  sje-propernouns.lexc  subjunctions.lexc  verbs.lexc
src/fst/morphology/test/: Makefile-old-system  Makefile.am  config.json.in  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  generate-verb-lemmas.sh.in  pron-codes.txt  test-verb-generation.sh.in  testverbparadigm.txt
src/fst/orthography/: downcase-derived_proper-strings.xfscript  inituppercase.regex  spellrelax-mobile-keyboard.regex
src/fst/stems/: abbreviations.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  sje-propernouns.lexc  subjunctions.lexc  verbs.lexc
src/fst/test/gt-norm-yamls/: A-tjaoskes_gt-norm.yaml  M-all_gt-norm.yaml  N-avvdagiehtje_gt-norm.yaml  N-baardne_gt-norm.yaml  N-bierdnes_gt-norm.yaml  N-bisste_gt-norm.yaml  N-guoksagis_gt-norm.yaml  N-haeggga_gt-norm.yaml  N-juallge_gt-norm.yaml  N-muohta_gt-norm.yaml  N-vaarre_gt-norm.yaml  V-allget_gt-norm.yaml  V-viessot_gt-norm.yaml  V-vuallget_gt-norm.yaml
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc  transcriptor-symbols2text.lexc
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  root.lexc  tags.yaml
src/morphology/affixes/: adjectives.lexc  nouns.lexc  symbols.lexc  verbs.lexc
src/morphology/stems/: abbreviations.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  punctuation.lexc  sje-propernouns.lexc  subjunctions.lexc  verbs.lexc
src/orthography/: inituppercase.regex  spellrelax-mobile-keyboard.regex  spellrelax.regex
src/phonology/: sje-phon.twolc
src/scripts/: smj2sje-num.pl
src/syntax/: disambiguation.cg3  disambiguator.cg3
src/transcriptions/: clock.lexc  transcriptor-clock-digit2text.lexc  transcriptor-numbers-digit2text.lexc
(+171 files in other folders)
