## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki \
		  adjectives-affixes.jspwiki \
		  abbreviations-stems.jspwiki      \
		  adjectives-stems.jspwiki         \
		  adpositions-stems.jspwiki        \
		  adverbs-stems.jspwiki            \
		  conjunctions-stems.jspwiki       \
		  interjections-stems.jspwiki      \
		  nouns-stems.jspwiki              \
		  numerals-stems.jspwiki           \
		  particles-stems.jspwiki          \
		  pronouns-stems.jspwiki           \
		  sje-propernouns-stems.jspwiki        \
		  punctuation-stems.jspwiki        \
		  subjunctions-stems.jspwiki       \
		  verbs-stems.jspwiki              \
		  phonology-morphology.jspwiki
# clitics-morphology.jspwiki       \
# compounding-morphology.jspwiki   \
# acronyms-stems.jspwiki           \
# adjectives-oahpa-stems.jspwiki   \
# nouns-oahpa-stems.jspwiki        \
# adjectives-oahpa-affixes.jspwiki \
# nouns-affixes.jspwiki            \
# propernouns-affixes.jspwiki      \
# verbs-affixes.jspwiki

include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
